# RM2022-Vision

./: .gitignore  CMakeLists.txt  README.md  camera-param-6mm.yml  camera-param-8mm.yml  main.cpp
CIDP-RMCV-2022/: main.cpp
CIDP-RMCV-2022/armor/src/armor_finder/find/: find_light_blobs.cpp
CIDP-RMCV-2022/armor/src/armor_finder/send_target/: send_target.cpp
CIDP-RMCV-2022/doc/: 关于代码单目测距的误差解释.md
CIDP-RMCV-2022/energy/include/energy/: energy.h
CIDP-RMCV-2022/energy/src/energy/get/: get_guess_point.cpp  get_predict_point.cpp
CIDP-RMCV-2022/energy/src/energy/judge/: judge_time.cpp
CIDP-RMCV-2022/energy/src/energy/tool/: tool.cpp
CIDP-RMCV-2022/others/include/: constants.h  log.h
CIDP-RMCV-2022/others/include/camera/: wrapper_head.h
CIDP-RMCV-2022/others/src/camera/: camera_wrapper.cpp
armor/include/: general.h  inference.h  kalman.h  predictor_kalman.h  show_images.h
armor/include/armor_finder/: armor_finder.h
armor/include/armor_finder/classifier/: classifier.h
armor/include/show_images/: show_images.h
armor/src/armor_finder/: armor_finder.cpp
armor/src/armor_finder/anti_top/: anti_top.cpp
armor/src/armor_finder/find/: find_armor_box.cpp  find_light_blobs.cpp
armor/src/armor_finder/searching_state/: searching_state.cpp
armor/src/armor_finder/send_target/: send_target.cpp
armor/src/armor_finder/tracking_state/: tracking_state.cpp
armor/src/detector/: inference.cpp
armor/src/predictor/: predictor_kalman.cpp
armor/src/searching_state/: searching_state.cpp
armor/src/send_target/: send_target.cpp
armor/src/show_images/: show_images.cpp
armor/src/standby_state/: standby_state.cpp
camera/hikvision/config/: camera.yaml
camera/hikvision/config/cameraCaliData/caliResults/: caliBiasData.txt  calibCameraData.yml
camera/hikvision/include/: hikvision_camera.h
camera/hikvision/src/: hikvision_camera.cpp
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/: CMakeLists.txt
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/armor/src/armor_finder/: armor_finder.cpp
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/armor/src/armor_finder/armor_box/: armor_box.cpp
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/camera/hikvision/config/: camera.yaml
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/doc/: Opencv-4.1.2离线安装教程.md  操作手自瞄使用手册V1.1.docx  环境配置手册.md
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/energy/include/energy/: constant.h
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/energy/src/energy/: energy.cpp
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/energy/src/energy/clear/: clear.cpp
cv/rm2021_cidp_vision-master/123/CIDP-RMCV-2022/energy/src/energy/get/: get_polar_angle.cpp
cv/rm2021_cidp_vision-master/CIDP-RMCV-2022/armor/src/armor_finder/classifier/: classifier.cpp
cv/rm2021_cidp_vision-master/CIDP-RMCV-2022/armor/src/armor_finder/find/: find_armor_box.cpp
cv/rm2021_cidp_vision-master/CIDP-RMCV-2022/camera/hikvision/src/: hikvision_camera.cpp
cv/rm2021_cidp_vision-master/CIDP-RMCV-2022/others/include/camera/: video_wrapper.h
cv/rm2021_cidp_vision-master/CIDP-RMCV-2022/others/include/config/: setconfig.h
cv/rm2021_cidp_vision-master/CIDP-RMCV-2022/others/src/: additions.cpp
cv/rm2021_cidp_vision-master/CIDP-RMCV-2022/others/src/camera/: video_wrapper.cpp
doc/: Opencv-4.1.2离线安装教程.md  代码调试说明V1.0.md  代码调试说明V1.1.md  代码调试说明V1.2.md  关于代码单目测距的误差解释.md  环境配置手册.md
energy/include/energy/: param_struct_define.h
energy/src/energy/: run.cpp
energy/src/energy/calibrate/: split.cpp  structing.cpp
energy/src/energy/change/: mode_change.cpp  multiple_mode.cpp
energy/src/energy/clear/: clear.cpp  energy_init.cpp
energy/src/energy/get/: get_aim_point.cpp  get_polar_angle.cpp
energy/src/energy/judge/: judge_mode.cpp
energy/src/energy/mark/: mark.cpp
energy/src/energy/send/: send.cpp
others/include/: additions.h  constants.h  log.h  options.h  systime.h
others/include/camera/: Hikcamera_debug.h  camera_wrapper.h
others/src/: HikCamera.cpp  additions.cpp  options.cpp  systime.cpp
others/src/camera/: Hikcamera_debug.cpp  Hikcamera_wrapper.cpp  camera_wrapper.cpp
rm2021_cidp_vision/: CMakeLists.txt  README.md  main.cpp
rm2021_cidp_vision/armor/include/armor_finder/: armor_finder.h
rm2021_cidp_vision/armor/src/armor_finder/: armor_finder.cpp
rm2021_cidp_vision/armor/src/armor_finder/armor_box/: armor_box.cpp
rm2021_cidp_vision/armor/src/armor_finder/find/: find_armor_box.cpp  find_light_blobs.cpp
rm2021_cidp_vision/armor/src/armor_finder/searching_state/: searching_state.cpp
rm2021_cidp_vision/energy/include/energy/: energy.h  param_struct_define.h
rm2021_cidp_vision/energy/src/energy/change/: target_change.cpp
rm2021_cidp_vision/energy/src/energy/find/: energy_finder.cpp
rm2021_cidp_vision/energy/src/energy/judge/: judge_contour.cpp  judge_shoot.cpp
rm2021_cidp_vision/energy/src/energy/show/: show.cpp
rm2021_cidp_vision/energy/src/energy/tool/: tool.cpp
rm2021_cidp_vision/others/include/: constants.h
rm2021_cidp_vision/others/include/HIk/: HikCamera.h
rm2021_cidp_vision/others/include/camera/: Hikcamera_wrapper.h  video_wrapper.h
rm2021_cidp_vision/others/src/: HikCamera.cpp  additions.cpp  options.cpp
rm2021_cidp_vision/others/src/camera/: Hikcamera_debug.cpp  Hikcamera_wrapper.cpp  video_wrapper.cpp
rm2021_cidp_vision/摄像头更换必看/: 1.txt  2.txt  摄像头更换看我.md
rm2021_cidp_vision/测试代码/: Readme.md
rm2021_cidp_vision/测试代码/开机自启动/: .start_test.sh.swp  auto_start.sh
tools/: auto_start.sh  save_distance.cpp  save_labelled.cpp
tools/CameraCalibration/: 摄像头更换看我.md
数据可视化/test1/: test1.py
(+5 files in other folders)
